publicarAnuncio modo escritorio

--- a/css/busqueda.css
+++ b/css/busqueda.css
@@ -181,7 +181,7 @@ nav input[type="text"] {
     }
 
     #divIconos a {
-        width: auto;
+        width: 5%;
     }
 
     nav form input[type="text"] {
