--- a/css/editarPerfil.css
+++ b/css/editarPerfil.css
@@ -50,9 +50,8 @@ input[type="email"],textarea {
     font-size: 5vw;
     margin-bottom: 15px;
     display: block;
+    width: 60%;
 }
-
-
 
 input[type="submit"] {
     font-size: 8vw;
@@ -96,10 +95,8 @@ h1 {
         grid-template-columns: 100%;
     }
 
-    #datos input[type="password"],
-    input[type="email"], input[type="text"] {
-        padding: 5px 15px;
-        font-size: 30px;
+    #datos input[type="password"], input[type="email"], input[type="text"], input[type="file"]{
+        font-size: 2vw;
     }
 
     form h1 {
@@ -107,8 +104,7 @@ h1 {
     }
 
     form input[type="submit"], form input[type="button"] {
-        height: 15%;
-        font-size: 30px;
+        font-size: 2vw;
         padding: 10px 20px;
         width: 60%;
         margin-bottom: 30px;
