Js - CSS editar perfil y búsqueda

--- a/css/anuncio.css
+++ b/css/anuncio.css
@@ -91,5 +91,12 @@
         width: 50%;
         margin-bottom: 50px;
     }
+    footer p{
+        font-size: 2vw;
+        margin: 0;
+    }
+    footer a img{
+        width: 50%;
+    }
 
 }
