--- a/css/editarPerfil.css
+++ b/css/editarPerfil.css
@@ -1,7 +1,7 @@
 /* EDITARPERFIL.PHP */
 #contenedor5 {
     display: grid;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
     grid-template-columns: 100%;
 }
 
@@ -9,6 +9,7 @@ header {
     grid-column: 1/2;
     grid-row: 1/2;
 }
+
 header p {
     margin-top: 30px;
     margin-left: 30px;
@@ -32,8 +33,8 @@ footer {
 }
 
 #datos input[type="text"],
-input[type="password"],
-input[type="email"],textarea {
+#datos input[type="password"],
+#datos input[type="email"], #datos textarea {
     font-size: 5vw;
     flex-basis: 100%;
     border: 2px solid #850018;
@@ -45,13 +46,11 @@ input[type="email"],textarea {
     user-select: revert;
 }
 
-#datos  input[type="file"] {
+#datos input[type="file"] {
     flex-basis: 100%;
     font-size: 5vw;
-    margin-bottom: 15px;
-    display: block;
+    text-align: right;
 }
-
 
 
 input[type="submit"] {
@@ -72,22 +71,38 @@ input[type="submit"]:hover {
 
 label {
     flex-basis: 100%;
-    height: 5%;
     font-size: 6.5vw;
 }
 
 h1 {
-  margin: 0;
-  font-size: 10vw;
-  grid-column: 1/2;
-  grid-row: 2/3;
-  text-align: center;
+    margin: 0;
+    font-size: 10vw;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    text-align: center;
+}
+
+#divImg {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    justify-self: center;
+    width: 80%;
+    display: flex;
+    justify-content: right;
+}
+
+#divImg img {
+    flex-basis: 25%;
 }
 
 @media screen and (min-width: 769px) {
     header img {
-        width: 50%;
-        margin-bottom: 50px;
+        width: 25%;
+        margin: 0;
+    }
+
+    header {
+        margin-left: 10px;
     }
 
     #contenedor5 {
@@ -96,27 +111,32 @@ h1 {
         grid-template-columns: 100%;
     }
 
-    form input[type="password"],
-    input[type="email"], input[type="text"] {
+    #datos input[type="text"],
+    #datos input[type="password"],
+    #datos input[type="email"], #datos textarea {
         padding: 5px 15px;
-        font-size: 30px;
+        font-size: 2vw;
         width: 60%;
     }
 
-    form h1 {
-        font-size: 45px;
+    #datos input[type="file"] {
+        font-size: 2vw;
+        width: 60%;
+    }
+
+    h1 {
+        font-size: 4vw;
     }
 
     form input[type="submit"], form input[type="button"] {
-        height: 15%;
         font-size: 30px;
         padding: 10px 20px;
         width: 60%;
         margin-bottom: 30px;
     }
 
-    label p {
-        font-size: 23px;
+    label {
+        font-size: 2vw;
     }
 
     footer p, a {
@@ -126,12 +146,4 @@ h1 {
     #divIconos a {
         width: 5%;
     }
-  }
-
-
-#fotoPerfil{
-    grid-column: 1/2;
-    grid-row: 3/4;
-    width: 50%;
-    justify-self: center;
 }
