--- a/css/general.css
+++ b/css/general.css
@@ -32,7 +32,7 @@ header img {
 }
 
 footer {
-    font-size: 4.5vw;
+    font-size: 3.5vw;
     width: 100%;
     display: flex;
     text-align: center;
@@ -45,10 +45,11 @@ footer {
     grid-row: 4/5;
     position: relative;
     bottom: 0vh;
+    flex-direction: column;
 }
 
 footer p {
-    margin: 10px 0;
+    margin: 0;
 }
 
 #divIconos {
@@ -61,8 +62,9 @@ footer p {
 footer a {
     width: 10%;
     margin-right: 20px;
+    font-size: 1vw;
 }
 
 footer a img {
-    width: 100%;
+    width: 50%;
 }
