footer en todas las paginas

--- a/css/busqueda.css
+++ b/css/busqueda.css
@@ -170,10 +170,6 @@ nav input[type="text"] {
         font-size: 30px;
     }
 
-    footer p, a {
-        font-size: 23px;
-    }
-
     #divIconos a {
         width: 5%;
     }
@@ -228,5 +224,38 @@ nav input[type="text"] {
 
     .anuncio .imagenDiv img {
         width: 100%;
+    }
+
+    footer {
+        font-size: unset;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    footer p {
+        font-size: 1vw;
+        margin: 0;
+    }
+
+    footer a img {
+        width: 50%;
+    }
+
+    footer div {
+        width: 33%;
+    }
+
+    #divIconos p {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    #divIconos a {
+        width: 15%;
+    }
+
+    #divIconos {
+        width: 33%;
     }
 }
