--- a/css/anuncio.css
+++ b/css/anuncio.css
@@ -91,21 +91,12 @@
         width: 50%;
         margin-bottom: 50px;
     }
-    footer p{
-        font-size: 2vw;
-        margin: 0;
-    }
-    footer a img{
-        width: 50%;
-    }
 
     #navAnuncio a{
         font-size: 50px;
     }
 
-    footer p, a {
-        font-size: 23px;
-    }
+
 
     #divIconos a {
         width: 5%;
@@ -113,6 +104,39 @@
 
     #fotoAnuncio {
         width: 50%;
+    }
+
+    footer {
+        font-size: unset;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    footer p {
+        font-size: 1vw;
+        margin: 0;
+    }
+
+    footer a img {
+        width: 50%;
+    }
+
+    footer div {
+        width: 33%;
+    }
+
+    #divIconos p {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    #divIconos a {
+        width: 15%;
+    }
+
+    #divIconos {
+        width: 33%;
     }
 
 }
