--- a/css/ayuda.css
+++ b/css/ayuda.css
@@ -90,11 +90,40 @@ h1 {
         width: 50%;
     }
 
-    footer p, a {
-        font-size: 1.5vw;
+    #divIconos a {
+        width: 5%;
+    }
+
+    footer {
+        font-size: unset;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    footer p {
+        font-size: 1vw;
+        margin: 0;
+    }
+
+    footer a img {
+        width: 50%;
+    }
+
+    footer div {
+        width: 33%;
+    }
+
+    #divIconos p {
+        width: 100%;
+        margin-bottom: 10px;
     }
 
     #divIconos a {
-        width: 5%;
+        width: 15%;
+    }
+
+    #divIconos {
+        width: 33%;
     }
 }
