--- a/css/loginRegistro.css
+++ b/css/loginRegistro.css
@@ -120,11 +120,36 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
         font-size: 23px;
     }
 
-    footer p, a {
-        font-size: 23px;
+    footer {
+        font-size: unset;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    footer p {
+        font-size: 1vw;
+        margin: 0;
+    }
+
+    footer a img {
+        width: 50%;
+    }
+
+    footer div {
+        width: 33%;
+    }
+
+    #divIconos p {
+        width: 100%;
+        margin-bottom: 10px;
     }
 
     #divIconos a {
-        width: 5%;
+        width: 15%;
+    }
+
+    #divIconos {
+        width: 33%;
     }
 }
