--- a/css/busqueda.css
+++ b/css/busqueda.css
@@ -128,12 +128,56 @@ nav input[type="button"] {
     padding: 10px;
 }
 
-form {
+footer p {
+    font-size: 5vw;
+    margin: 0;
+}
+
+#divIconos {
     width: 100%;
-    padding: 0 10px;
     display: flex;
-    margin: 0 10px;
+    flex-wrap: wrap;
     justify-content: center;
+}
+
+footer a {
+    width: 10%;
+    margin-right: 20px;
+    font-size: 1vw;
+}
+
+footer a img {
+    width: 65%;
+}
+
+footer {
+    width: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #666666;
+    padding: 5px 0px;
+    grid-column: 1/2;
+    grid-row: 4/5;
+    font-size: 4.5vw;
+    position: relative;
+    bottom: 0vh;
+    flex-direction: column;
+}
+
+#divIconos p {
+    width: 100%;
+}
+
+#divIconos a {
+    margin-top: 5px;
+    width: 18%;
+}
+
+#copy, #ayuda, #divIconos {
+    margin-bottom: 10px;
 }
 
 nav input[type="text"] {
@@ -169,15 +213,18 @@ nav input[type="text"] {
     flex-basis: 100%;
 
 }
+
 .imagenDiv img {
     width: 50%;
     object-fit: cover;
 }
+
 .botonesAnuncio {
     flex-basis: 100%;
     align-self: self-end;
     text-align: right;
 }
+
 .datosAnuncioBusqueda{
     display: flex;
 }
