--- a/css/editarPerfil.css
+++ b/css/editarPerfil.css
@@ -1,7 +1,7 @@
 /* EDITARPERFIL.PHP */
 #contenedor5 {
     display: grid;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto 1fr auto;
     grid-template-columns: 100%;
 }
 
@@ -32,10 +32,6 @@ footer {
     grid-column: 1/2;
 }
 
-footer a {
-    font-size: 5vw;
-}
-
 #datos input[type="text"],
 #datos input[type="password"],
 #datos input[type="email"], #datos textarea {
@@ -54,7 +50,7 @@ footer a {
     flex-basis: 100%;
     font-size: 5vw;
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 input[type="submit"] {
     font-size: 8vw;
@@ -112,43 +108,49 @@ h1 {
 
     header {
         margin-left: 10px;
+        justify-self: center;
+        width: 50%;
     }
 
     #contenedor5 {
         display: grid;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto 1fr auto;
         grid-template-columns: 100%;
     }
 
+    #datos{
+        width: 50%;
+    }
 
     #datos input[type="text"],
     #datos input[type="password"],
     #datos input[type="email"], #datos textarea {
         padding: 5px 15px;
-        font-size: 2vw;
+        font-size: 1.3vw;
         width: 60%;
     }
 
     #datos input[type="file"] {
-        font-size: 2vw;
+        font-size: 1.3vw;
         width: 60%;
-        margin-bottom: 0;
+        margin-bottom: 20px;
         text-align: right;
     }
 
     h1 {
-        font-size: 4vw;
+        font-size: 2vw;
+        margin-bottom: 25px;
     }
 
     form input[type="submit"], form input[type="button"] {
-        font-size: 2vw;
+        font-size: 1.7vw;
         padding: 10px 20px;
         width: 60%;
         margin-bottom: 30px;
     }
 
     label {
-        font-size: 2vw;
+        font-size: 1.3vw;
     }
 
     footer {
