--- a/css/loginRegistro.css
+++ b/css/loginRegistro.css
@@ -91,36 +91,41 @@ form input[type="submit"]:hover, form input[type="button"]:hover {
 
 
 @media (min-width: 769px) {
+    header {
+        justify-self: center;
+        width: 50%;
+    }
+
     header img {
         width: 25%;
     }
 
     form {
-        width: 80%;
+        width: 50%;
         justify-self: center;
     }
 
     form input[type="password"],
     input[type="email"], input[type="text"] {
         padding: 0 15px;
-        font-size: 2.5vw;
+        font-size: 1.3vw;
         width: 60%;
     }
 
     form h1 {
-        font-size: 3.7vw;
+        font-size: 2vw;
         margin: 0;
     }
 
     form input[type="submit"], form input[type="button"] {
-        font-size: 3vw;
+        font-size: 1.7vw;
         padding: 0;
         width: 60%;
         margin-bottom: 30px;
     }
 
     #divLogin a {
-        font-size: 2.5vw;
+        font-size: 1.7vw;
     }
 
     footer {
