--- a/css/general.css
+++ b/css/general.css
@@ -32,28 +32,6 @@ header img {
     width: 70%;
 }
 
-footer p {
-    font-size: 5vw;
-    margin: 0;
-}
-
-#divIconos {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-footer a {
-    width: 10%;
-    margin-right: 20px;
-    font-size: 1vw;
-}
-
-footer a img {
-    width: 65%;
-}
-
 footer {
     width: 100%;
     display: flex;
@@ -71,6 +49,22 @@ footer {
     flex-direction: column;
 }
 
+#divIconos {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+footer p {
+    font-size: 5vw;
+    margin: 0;
+}
+
+footer a img {
+    width: 65%;
+}
+
 #divIconos p {
     width: 100%;
 }
@@ -82,4 +76,45 @@ footer {
 
 #copy, #ayuda, #divIconos {
     margin-bottom: 10px;
+}
+
+@media (min-width: 769px)  {
+
+
+    footer p, a {
+        font-size: 2vw;
+    }
+    footer {
+        font-size: unset;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    #copy p,  #ayuda p,#divIconos p{
+        font-size: 1.3vw;
+        margin: 0;
+    }
+
+    footer a img {
+        width: 50%;
+    }
+
+    footer div {
+        width: 33%;
+    }
+
+    #divIconos p {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    #divIconos a {
+        width: 15%;
+        margin-top: 5px;
+    }
+
+    #divIconos {
+        width: 33%;
+    }
 }
