--- a/css/editarPerfil.css
+++ b/css/editarPerfil.css
@@ -1,7 +1,7 @@
 /* EDITARPERFIL.PHP */
 #contenedor5 {
     display: grid;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto 1fr auto;
     grid-template-columns: 100%;
 }
 
@@ -30,10 +30,6 @@ header p {
 footer {
     grid-row: 5/6;
     grid-column: 1/2;
-}
-
-footer a {
-    font-size: 5vw;
 }
 
 #datos input[type="text"],
