anuncio.php arreglado

--- a/css/editarPerfil.css
+++ b/css/editarPerfil.css
@@ -109,7 +109,6 @@ h1 {
     header {
         margin-left: 10px;
         justify-self: center;
-        width: 50%;
     }
 
     #contenedor5 {
@@ -153,5 +152,13 @@ h1 {
         font-size: 1.3vw;
     }
 
+    #divImg {
+        margin-bottom: 20px;
+        width: 50%;
+    }
 
+    #fotoPerfil {
+        width: 30%;
+        border-radius: 50%;
+    }
 }
