--- a/css/busqueda.css
+++ b/css/busqueda.css
@@ -36,18 +36,14 @@
 h2 {
     font-size: 6vw;
     margin: 0;
+    text-align: right;
+    margin-bottom: 10px;
 }
 
 h3 {
     text-align: right;
     font-size: 5vw;
     margin: 0 0 15px;
-}
-
-
-#buscar {
-    margin-left: 20px;
-    width: 15%;
 }
 
 nav {
@@ -59,14 +55,11 @@ nav {
 }
 
 nav input[type="text"] {
-    width: 75%;
-    padding: 5px;
-    padding-left: 40px;
-    font-size: 34px;
+
 }
 
 #buscar {
-    width: 20%;
+    width: 23%;
 }
 
 #botones {
@@ -116,6 +109,10 @@ nav form input[type='text'] {
     margin-bottom: 15px;
 }
 
+nav form {
+    width: 90%;
+}
+
 #enlaces {
     flex-basis: 100%;
     display: flex;
@@ -143,6 +140,7 @@ nav input[type="text"] {
     outline: none;
     background-color: #ebebeb;
     user-select: revert;
+    width: 75%;
 }
 
 #contenedor3 {
